config/network-policy/authorino-operator.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-authorino-operator
spec:
  priority: 52
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          control-plane: authorino-operator
  ingress:
    - name: allow-metrics
      action: Allow
      from:
        - namespaces: {}
      ports:
        - portNumber:
            protocol: TCP
            port: 8080
  egress:
    # this may never be need
    - name: allow-otlp-traces
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - portNumber:
            protocol: TCP
            port: 4317
    - name: allow-dns
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
