config/network-policy/authorino.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-authorino
spec:
  priority: 51
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          authorino-resource: authorino
  ingress:
    - name: allow-authorization-grpc
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - portNumber:
            protocol: TCP
            port: 50051
    - name: allow-authorization-http
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - portNumber:
            protocol: TCP
            port: 5001
    - name: allow-oidc
      action: Allow
      from:
        - namespaces: {}
      ports:
        - portNumber:
            protocol: TCP
            port: 8083
  egress:
    - name: allow-otlp-traces
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - portNumber:
            protocol: TCP
            port: 4317
    - name: allow-external-oidc
      action: Allow
      to:
        - networks:
            - 0.0.0.0/0
      ports:
        - portNumber:
            protocol: TCP
            port: 443
    - name: allow-dns
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
