config/network-policy/console-plugin.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-console-plugin
spec:
  priority: 56
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          app: kuadrant-console-plugin
  ingress:
    - name: allow-console
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-console
      ports:
        - portNumber:
            protocol: TCP
            port: 9443
