config/network-policy/kuadrant-operator.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-operator
spec:
  priority: 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          app: kuadrant
          control-plane: controller-manager
  ingress:
    # only need if we plan to share the golang exposed metrics.
    # - name: allow-metrics
    #   action: Allow
    #   from:
    #     - namespaces: {}
    #   ports:
    #     - portNumber:
    #         protocol: TCP
    #         port: 8080
    - name: allow-grpc
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: kuadrant-system
      ports:
        - portNumber:
            protocol: TCP
            port: 50051
    - name: allow-wasm
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - portNumber:
            protocol: TCP
            port: 8082
  egress:
    - name: allow-otlp-traces
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - portNumber:
            protocol: TCP
            port: 4317
    - name: allow-dns
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
