config/network-policy/limitador-operator.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-limitador-operator
spec:
  priority: 55
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          app: limitador-operator
          control-plane: controller-manager
  ingress:
    # need to allow access to the go metrics.
    # - name: allow-metrics
    #   action: Allow
    #   from:
    #     - namespaces: {}
    #   ports:
    #     - portNumber:
    #         protocol: TCP
    #         port: 8080
  egress:
    - name: allow-otlp-traces
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - portNumber:
            protocol: TCP
            port: 4317
    - name: allow-dns
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
