config/network-policy/limitador.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kuadrant-limitador
spec:
  priority: 54
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kuadrant-system
      podSelector:
        matchLabels:
          app: limitador
          limitador-resource: limitador
  ingress:
    # Possible need to allow metrics scraping.
    # - name: allow-status-http
    #   action: Allow
    #   from:
    #     - namespaces:
    #         matchLabels:
    #           kubernetes.io/metadata.name: openshift-monitoring
    #     - namespaces:
    #         matchLabels:
    #           kubernetes.io/metadata.name: openshift-user-workload-monitoring
    #   ports:
    #     - portNumber:
    #         protocol: TCP
    #         port: 8080
    - name: allow-grpc
      action: Allow
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - portNumber:
            protocol: TCP
            port: 8081
  egress:
    - name: allow-otlp-traces
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - portNumber:
            protocol: TCP
            port: 4317
    - name: allow-dns
      action: Allow
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
